Fix OpenGraph image width on small displays

--- a/assets/sass/layouts/posts-single.scss
+++ b/assets/sass/layouts/posts-single.scss
@@ -102,7 +102,8 @@
 
                 img {
                     display: inline-block;
-                    max-width: 500px;
+                    width: 500px;
+                    max-width: 100%;
                     border-radius: .3em;
                     opacity: .9;
                     transition: opacity .1s;
